<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="40dp">
    <TextView
        android:id="@+id/txt_id"
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:text="@string/placeholder_id"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/txt_first_name"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:text="@string/placeholder_first"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/txt_id"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/txt_last_name"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:text="@string/placeholder_last"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/txt_first_name"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/txt_make"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:text="@string/placeholder_make"
        android:layout_toEndOf="@+id/txt_last_name"
        android:layout_alignParentTop="true"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/txt_model"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:text="@string/placeholder_model"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/txt_make"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/txt_cost"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:text="@string/placeholder_cost"
        android:layout_alignBottom="@+id/txt_model"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"/>

</RelativeLayout>